viewer: fix image nav group positioning on iOS
Commit 0f7d49b1 changed to make the main div relative, to fix the video
positioning via creating a new stacking context. This was all good for
video, but on iOS/iPadOS, but not Safari desktop, this broke the image
nav group, since it was also using position: absolute and not fixed.
Since that navbar has to be on that position, always, change to fixed.

--- a/static/corydalis/css/basic.css
+++ b/static/corydalis/css/basic.css
@@ -111,7 +111,7 @@ html {
 
 div#imageNavGroup {
     z-index: 2;
-    position: absolute;
+    position: fixed;
     bottom: 0.5em;
     right: 0.5em;
     opacity: 0.5;
